@@ -4,6 +4,8 @@
   o do not configure network if already up
   o allow to use a simplified time step
     (no timezone selection, ntp settings as advanced)
+- move functions to get available space from installer
+  (to be used in draklive-install)
 
 Version 10.16.1 - 18 March 2008
 
